--- a/greensource_pages/templates/greensource_pages/about.html
+++ b/greensource_pages/templates/greensource_pages/about.html
@@ -28,10 +28,10 @@
                 <img src="{% static 'images/abt-img.jpg' %}" class="img-fluid" alt="rooftop installation" />
                 <div class="bubbled-text-block wow fadeIn" data-wow-duration="400">
                     <div class="inner-box">
-                        <span data-toggle="counter-up">100</span>
+                        <span data-toggle="counter-up">5</span>
                         <span class="sign">+</span>
-                        <p> PANELS
-                            <br /> INSTALLED</p>
+                        <p> YEARS OF
+                            <br /> EXPERIENCE</p>
                     </div>
                 </div>
             </div>
@@ -39,7 +39,7 @@
                 Greensource Energy Consult is an end to end, customer oriented renewable energy business outfit providing sustainable solar
                 home solutions. Our goal is to provide tailored solutions and lifelong support empowering homes, communities, farms,
                 institutions and businesses to control the way they harness clean energy, with the quest of helping to create a world
-                where clean energy is powered by individuals, innovation and independence. Started in 2020 on the premise that anyone
+                where clean energy is powered by individuals, innovation and independence. Started in 2017 and Registered with Corporate Affairs Comission in 2020 on the premise that anyone
                 can be self-sufficient wherever they choose to live. Whether you live off the utility grid, are connected to your local
                 utility, or somewhere in between, We will guide you through the entire design process and beyond, with guaranteed lifetime
                 support. We're here to make sure your system is compatible, code-compliant, and appropriately sized to give you optimum
@@ -466,7 +466,7 @@
         <div class="row team-area owl-carousel owl-theme" id="team-one">
             <div class="item">
                 <div class="wow fadeIn single-team" data-wow-duration="3s" data-wow-delay="1.2s" data-wow-offset="10">
-                    <img src="{% static 'images/ceo.webp' %}" alt="C.E.O" />
+                    <amp-img src="{% static 'images/ceo.webp' %}" alt="C.E.O" layout="responsive" width="1" height="1"></amp-img>
                     <div class="team-text">
                         <span>Olumide Joseph</span>
                         <p>Founder/CEO</p>
@@ -475,7 +475,7 @@
             </div>
             <div class="item">
                 <div class="wow fadeIn single-team" data-wow-duration="3s" data-wow-delay="0.6s" data-wow-offset="10">
-                    <img src="{% static 'images/onifade.webp' %}" alt="Marketing Lead" />
+                    <amp-img src="{% static 'images/onifade.webp' %}" alt="Marketing Lead" layout="responsive" width="1" height="1"></amp-img>
                     <div class="team-text">
                         <span>Onifade Dolapo</span>
                         <p>Social Media</p>
@@ -484,7 +484,7 @@
             </div>
             <div class="item">
                 <div class="wow fadeIn single-team" data-wow-duration="3s" data-wow-delay="0.6s" data-wow-offset="10">
-                    <img src="{% static 'images/tola.webp' %}" alt="Lead Engineer" /> 
+                    <amp-img src="{% static 'images/tola.webp' %}" alt="Lead Engineer" layout="responsive" width="1" height="1"></amp-img> 
                     <div class="team-text">
                         <span>Adeyemi Tola</span>
                         <p>Installer</p>
