--- a/greensource_pages/templates/greensource_pages/index.html
+++ b/greensource_pages/templates/greensource_pages/index.html
@@ -554,9 +554,9 @@
                             </div>
                             <div class="single-testimonial-style-three">
                                 <i class="fas fa-quote-right"></i>
-                                <p>Great solar system, excellent workmanship and very professional team. My solar home system
-                                    has significantlyreduced my utility bills which i now channel to more productive use.
-                                    Willgladly recommend their services.</p>
+                                <p>Excellent workmanship and very professional team. My solar home system
+                                    has significantly reduced my utility bills which I now channel to more productive use.
+                                </p>
                                 <div class="client-block">
                                     <div class="image-block">
                                         <amp-img src="{% static 'images/Hycienth.webp' %}" alt="Awesome Image" width="100" height="100" layout="responsive"></amp-img>
