--- a/greensource_pages/templates/greensource_pages/our-team.html
+++ b/greensource_pages/templates/greensource_pages/our-team.html
@@ -6,7 +6,7 @@
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>Greensource Solar Team</h1>
+            <h1>Our Solar Team</h1>
         </div>
     </div>
 </div>
@@ -31,7 +31,7 @@
     <div class="team-box-container">
         <div class="member-box member-1">
             <div class="member-img"> 
-                <img src="{% static 'images/ceo.webp' %}" alt="CEO">
+                <amp-img src="{% static 'images/ceo.webp' %}" alt="CEO" layout="1" width="1" height="1"></amp-img>
             </div>
             <div class="member-name">
                 <span>OLUMIDE JOSEPH</span>
@@ -40,7 +40,7 @@
         </div>
         <div class="member-box member-2">  
             <div class="member-img">
-                <img src="{% static 'images/onifade.webp' %}" alt="Business Advisor">
+                <amp-img src="{% static 'images/onifade.webp' %}" alt="Business Advisor" layout="1" width="1" height="1"></amp-img>
             </div>
             <div class="member-name">
                 <span>DOLAPO ONIFADE</span>
@@ -49,7 +49,7 @@
         </div>
         <div class="member-box member-3">
             <div class="member-img">
-                <img src="{% static 'images/tola.webp' %}" alt="Engineer">
+                <amp-img src="{% static 'images/tola.webp' %}" alt="Engineer" layout="1" width="1" height="1"></amp-img>
             </div>
             <div class="member-name">
                 <span>TOLA ADEYEMI</span>
@@ -58,7 +58,7 @@
         </div>
         <div class="member-box member-5">
             <div class="member-img">
-                <img src="{% static 'images/yussuf.webp' %}" alt="Engineer">
+                <amp-img src="{% static 'images/yussuf.webp' %}" alt="Engineer" layout="1" width="1" height="1"></amp-img>
             </div>
             <div class="member-name">
                 <span>Yussuf Adebayo</span>
@@ -67,7 +67,7 @@
         </div>
         <div class="member-box member-4">
             <div class="member-img">
-            <img src="{% static 'images/afolabi.webp' %}" alt="Web Developer">
+            <amp-img src="{% static 'images/afolabi.webp' %}" alt="Web Developer" layout="1" width="1" height="1"></amp-img>
             </div>
             <div class="member-name">
                 <span>Afolabi Ahmed</span>
@@ -77,7 +77,7 @@
         <div class="detail-box-1">
             <div class="member-detail-box">  
                 <div class="detail-box-img">
-                    <img src="{% static 'images/ceo.webp' %}" alt="CEO">
+                    <amp-img src="{% static 'images/ceo.webp' %}" alt="CEO" layout="responsive" width="1" height="1"></amp-img>
                 </div>
                 <div class="detail-box-text"> 
                     <a href="javascript:void(0);" class="cancel">
@@ -104,7 +104,7 @@
         <div class="detail-box-2">
             <div class="member-detail-box">
                 <div class="detail-box-img">
-                    <img src="{% static 'images/onifade.webp' %}" alt="Business Advisor">
+                    <amp-img src="{% static 'images/onifade.webp' %}" alt="Business Advisor" layout="responsive" width="1" height="1"></amp-img>
                 </div>
                 <div class="detail-box-text">
                     <a href="javascript:void(0);" class="cancel">
@@ -131,7 +131,7 @@
         <div class="detail-box-3">
             <div class="member-detail-box">
                 <div class="detail-box-img">
-                    <img src="{% static 'images/tola.webp' %}" alt="Engineer">
+                    <amp-img src="{% static 'images/tola.webp' %}" alt="Engineer" layout="responsive" width="1" height="1"></amp-img>
                 </div>
                 <div class="detail-box-text">
                     <a href="javascript:void(0);" class="cancel">
@@ -158,7 +158,7 @@
         <div class="detail-box-5">
             <div class="member-detail-box">
                 <div class="detail-box-img">
-                    <img src="{% static 'images/yussuf.webp' %}" alt="Engineer">
+                    <amp-img src="{% static 'images/yussuf.webp' %}" alt="Engineer" layout="responsive" width="1" height="1"></amp-img>
                 </div>
                 <div class="detail-box-text">
                     <a href="javascript:void(0);" class="cancel">
@@ -185,7 +185,7 @@
         <div class="detail-box-4">
             <div class="member-detail-box">
                 <div class="detail-box-img">
-                    <img src="{% static 'images/afolabi.webp' %}" alt="Web Developer">
+                    <amp-img src="{% static 'images/afolabi.webp' %}" alt="Web Developer" layout="responsive" width="1" height="1"></amp-img>
                 </div>
                 <div class="detail-box-text">
                     <a href="javascript:void(0);" class="cancel">
