--- a/greensource_pages/templates/greensource_pages/pricing.html
+++ b/greensource_pages/templates/greensource_pages/pricing.html
@@ -105,7 +105,7 @@
         <h5 class="pricing-header">OUR PACKAGES</h5>
         <div class="pricing-table row">
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
-                <p>Price - N405, 000</p>
+                <p>Price - N425, 000</p>
                 <div class="table">
                     <h5>Lite</h5>
                     <span>Description</span>
@@ -117,7 +117,7 @@
                             <br />
                             <strong>200 AH</strong> Solar Battery
                             <br />
-                            <strong>1.5 KVA</strong> Inverter
+                            <strong>1.5 KW</strong> Inverter
                         </span>
                     </div>
                     <h6>solar capacity</h6>
