--- a/greensource_pages/templates/greensource_pages/project-details.html
+++ b/greensource_pages/templates/greensource_pages/project-details.html
@@ -22,7 +22,7 @@
     </ol>
 </nav>
 <div class=" container-fluid padding page-header">
-    <h2>Powering Solar Solutions One Project At A Time</h2>
+    <h2>Powering Our Community One Project At A Time</h2>
 </div>
 <div class="container padding">
     <div class="row project-details padding">
