--- a/greensource_pages/templates/greensource_pages/projects.html
+++ b/greensource_pages/templates/greensource_pages/projects.html
@@ -21,7 +21,7 @@
 <div class="container-fluid padding page-header">
     <h2>We provide reliable & sustainable solar solutions</h2>
 </div>
-<div class="container-fluid padding">
+<div class="container padding">
     <div class="row projects">
         {% if obj %}
         {% for solar in obj %}
