--- a/staticfiles/css/home.css
+++ b/staticfiles/css/home.css
@@ -474,7 +474,7 @@ html body.offcanvas-menu:before {
 	background-repeat: no-repeat;
 	background-size: cover;
 	width: 100%;
-	height: 650px;
+	height: 750px;
 	z-index: 1;
 	filter: brightness(0.29);
 }
@@ -2199,7 +2199,6 @@ nav .breadcrumb li a:hover{
 	text-align:center;
 	margin-top:20px;
 	width:100%;
-
 }
 .featured-project amp-img{
 	margin:10px 10px;
@@ -2263,12 +2262,12 @@ nav .breadcrumb li a:hover{
 .projects{
 	margin-top: 100px;
 }
-.portfolio .image-block {
+.portfolio .image-block{
 	margin-top: 20px;
 	position: relative;
 	overflow: hidden;
 }
-.portfolio .image-block:before {
+.portfolio .image-block:before{
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -2281,12 +2280,12 @@ nav .breadcrumb li a:hover{
 	z-index: 1;
 	transition: .5s ease;
 }
-.portfolio .image-block > amp-img {
+.portfolio .image-block > amp-img{
 	margin: 0;
 	width: 100%;
 	height: 350px;
 }
-.portfolio .image-block .overlay {
+.portfolio .image-block .overlay{
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -2298,18 +2297,18 @@ nav .breadcrumb li a:hover{
 			transform: scale(0);
 	z-index: 2;
 }
-.portfolio:hover .image-block:before {
+.portfolio:hover .image-block:before{
 	-webkit-transform: scaleY(1);
 			transform: scaleY(1);
 	transition: .5s ease;
 }
-.portfolio:hover .image-block .overlay {
+.portfolio:hover .image-block .overlay{
 	-webkit-transform: scale(1);
 			transform: scale(1);
 	transition: all 900ms ease;
 	transition-delay: .5s;
 }
-.portfolio:hover .image-block .overlay .caption {
+.portfolio:hover .image-block .overlay .caption{
 	color: #fff;
 	font-size: 18px;
 	padding: 5px;
@@ -2321,22 +2320,22 @@ nav .breadcrumb li a:hover{
 	text-align: center;
 	background: rgba(31, 31, 37, 0.9);
 }
-@media only screen and (max-width: 1199px) {
+@media only screen and (max-width: 1199px){
 	.portfolio .image-block > amp-img{
 		width: 100%;
 		height: 300px;
 	}
 }
-@media only screen and (max-width: 991px) {
+@media only screen and (max-width: 991px){
 	.portfolio .image-block > amp-img{
 		width: 100%;
-		height: 250px;
+		height: 240px;
 	}
 }
 @media only screen and (max-width: 767px) {
 	.portfolio .image-block > amp-img{
 		width: 100%;
-		height: 280px;
+		height: 230px;
 		padding: 0;
 	}
 }
@@ -2618,14 +2617,14 @@ nav .breadcrumb li a:hover{
 	margin: 20px 5px;
 }
 .single-team:hover {
-	transform: translateY(15px);
+	transform: translateY(10px);
 }
 .single-team:hover:before {
 	opacity: 1;
 }
 .single-team:hover .team-text{
 	opacity: 1;
-	transform: translateY(15px);
+	transform: translateY(10px);
 	text-decoration: none;
 }
 .single-team:before{
@@ -2641,7 +2640,7 @@ nav .breadcrumb li a:hover{
 	transition: .5s;
 	opacity: 0;
 }
-.single-team img{
+.single-team amp-img{
 	width: 100%;
 	height: 100%;
 	top: 0;
@@ -2711,8 +2710,7 @@ nav .breadcrumb li a:hover{
 		width: 100%;
 	}
 	.single-team{
-		max-width: 100%;
-		min-width: 80%;
+		width: 80%;
 		height: 350px;
 		display: block;
 		margin-left: auto;
@@ -2777,7 +2775,7 @@ nav .breadcrumb li a:hover{
     height: 350px;
     position: relative;
 }
-.member-img img{
+.member-img amp-img{
     width:100%;
     height: 100%;
     object-position: center;
@@ -2854,7 +2852,7 @@ nav .breadcrumb li a:hover{
     width: 300px;
     height: 330px;
 }
-.detail-box-img img{
+.detail-box-img amp-img{
     width:100%;
     height: 100%;
     object-position: center;
@@ -3033,7 +3031,7 @@ nav .breadcrumb li a:hover{
 }
 @media(max-width:575px){
     .team-box-container{
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 250px 250px;
         grid-gap: 10px;
     }
     .member-img{
@@ -3043,8 +3041,6 @@ nav .breadcrumb li a:hover{
     #team{
         padding: 10px;
     }
-}
-@media only screen and (max-width: 450px) {
 	.team-heading p{
 		padding: 0px 15px;
 		text-align: justify;
@@ -3052,7 +3048,8 @@ nav .breadcrumb li a:hover{
 }
 @media(max-width:450px){
     .team-box-container{
-        grid-template-columns: 1fr;
+        grid-template-columns: 300px;
+        grid-gap: 10px;
     }
     .member-img{
         height: 350px;
@@ -5906,7 +5903,6 @@ nav .pagination a:hover{
 	  font-size:17px;
 	}
 }
-
 @media only screen and (max-width: 575px) {
 	.facts .bubbled-text-block span{
 	  	font-size:30px;
@@ -5915,4 +5911,42 @@ nav .pagination a:hover{
 		font-size:16px;
   	}
 }
-  
+/*--------------------------------------------------------------
+# GALLERY
+--------------------------------------------------------------*/
+.gallery a amp-img{
+	padding: 10px 10px;
+	margin-left: auto;
+	margin-right: auto;
+}
+@media only screen and (max-width: 1199px) {
+	.gallery amp-img{
+		max-width: 220px;
+		max-height:250px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
+@media only screen and (max-width: 991px) {
+	.gallery amp-img{
+		max-width: 220px;
+		max-height:250px;
+		align-items: center;
+		justify-content: center;
+	}
+}
+@media only screen and (max-width: 767px) {
+	.gallery amp-img{
+		max-width: 250px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
+@media only screen and (max-width: 575px) {
+	.gallery amp-img{
+		width: 100%;
+		display:block;
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
