--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -207,7 +207,8 @@
                     <h3>Connect us</h3>
                     <ul class="list-unstyled links">
                         <li>
-                            <p>Anobi Noah, arogun Mowe-Ofada Ogun.</p>
+                            <p><strong>Ogun</strong> :- Heritage by Anobi Noah Street, arogun bustop, Mowe-Ofada Ogun.</p>
+                            <p><strong>Lagos</strong> :- 9/11 Matuwo Street opp NNPC filling station Mushin Road.</p>
                         </li>
                         <li>
                             <span>
