--- a/contact_us/templates/contact_us/contact.html
+++ b/contact_us/templates/contact_us/contact.html
@@ -62,7 +62,7 @@
                         {{ form.phone|as_crispy_field }}
                     </div>
                     <div class="form-group col-md-6 mb-0">
-                        {{ form.priority_list|as_crispy_field }}
+                        {{ form.from_email|as_crispy_field }}
                     </div>
                     <p>Send me a price quotation for the following service:</p>
                     <div class="form-check col-md-12 mb-0">
