--- a/staticfiles/css/home.css
+++ b/staticfiles/css/home.css
@@ -4453,13 +4453,14 @@ input[type=radio]:focus {
 	background-image: url("/static/images/bbb.webp");
 	background-position: center center;
 	background-size: cover;
-	width: auto;
-	height: 92.5vh;
+	width: 100%;
+	height: 100vh;
 	text-align: center;
 }
 .error h4{
-	font-size: 100px;
+	font-size: 150px;
 	font-family: 'Big Shoulders Text', cursive;
+	font-weight: bold;
 	margin-top: 200px;
 	color:#fafafa;
 }
@@ -4478,7 +4479,7 @@ input[type=radio]:focus {
 	font-size: 16px;
 	font-weight: 600;
 	border: 2px solid #006420;
-	border-radius: 100px;
+	border-radius: 20px;
 	padding: 15px 20px;
 	color:#fff;
 	background: none;
