--- a/staticfiles/css/home.css
+++ b/staticfiles/css/home.css
@@ -4450,11 +4450,12 @@ input[type=radio]:focus {
 # 403 404 500 ERROR PAGES
 --------------------------------------------------------------*/
 .error{
-	background-image: url("/static/images/bbb.webp");
+	background-image: url('/static/images/work-mode.webp');
 	background-position: center center;
+	background-attachment: fixed;
 	background-size: cover;
-	width: 100%;
-	height: 100vh;
+	width: auto;
+	height: 100%;
 	text-align: center;
 }
 .error h4{
@@ -4477,7 +4478,7 @@ input[type=radio]:focus {
 }
 .error a{
 	font-size: 16px;
-	font-weight: 600;
+	font-weight: 500;
 	border: 2px solid #006420;
 	border-radius: 20px;
 	padding: 15px 20px;
