--- a/greensource_pages/templates/greensource_pages/pricing.html
+++ b/greensource_pages/templates/greensource_pages/pricing.html
@@ -205,7 +205,7 @@
                             {{ form.phone|as_crispy_field }}
                         </div>
                         <div class="form-group col-md-6 mb-0">
-                            {{ form.city|as_crispy_field }}
+                            {{ form.from_email|as_crispy_field }}
                         </div>
                         <div class="form-group col-md-12 mb-0">
                             {{ form.address|as_crispy_field }}
