--- a/static/css/home.css
+++ b/static/css/home.css
@@ -4450,12 +4450,13 @@ input[type=radio]:focus {
 # 403 404 500 ERROR PAGES
 --------------------------------------------------------------*/
 .error{
-	background-image: url('/static/images/work-mode.webp');
+	background-image: url('/static/images/bbb.webp');
 	background-position: center center;
 	background-attachment: fixed;
+	background-repeat: no-repeat;
 	background-size: cover;
 	width: auto;
-	height: 100%;
+	height: 750px;
 	text-align: center;
 }
 .error h4{
