--- a/templates/500.html
+++ b/templates/500.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Professional Renewable energy and Management services Mowe-Ofada Ogun State" />
     <meta name="keywords" content="Professional Solar design,Professional solar installation, solar component sales, solar maintenance services, inspection, energy analysis, battery backup installation, customer support, consultancy, solar systems troubleshooting"
     />
-    <title>500</title>
+    <title>Error - 500</title>
     <link rel="stylesheet" href="{% static 'css/home.css' %}" media="print" onload="this.media='all'" />
     <link rel="stylesheet" href="{% static 'css/allcss.css' %}" media="print" onload="this.media='all'" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" media="print" onload="this.media='all'" />     
@@ -22,12 +22,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}" />
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}" />
     <link href="https://fonts.googleapis.com/css?family=Poppins|Play|Big+Shoulders+Display|Teko&display=swap" rel="stylesheet" media="print" onload="this.media='all'"/>
-    <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js">
-    <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1, end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1, end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1, end) 0s 1 normal both;animation:-amp-start 8s steps(1, end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
-    <link rel="canonical" href="https://greensourcenergy.com/" />
-    <link rel="preload" fetchpriority="high" as="image" href="/static/images/greensourcelogo3.webp" type="image/webp" />
-    <link rel="preload" fetchpriority="low" as="image" href="/static/images/homepage2.webp" type="image/webp" />
-    <link rel="preload" fetchpriority="low" as="image" href="/static/images/video-bg.webp" type="image/webp" />
 </head>
 <body>
     <div class="container-fluid padding">
@@ -40,6 +34,7 @@
             </div>
         </div>
     </div>
+</body>
     <script async src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script async>window.jQuery || document.write('<script src="/static/js/jquery-3.6.1.min.js"><\/script>')</script></script>
     <script  async src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
@@ -48,11 +43,7 @@
     <script async>if(typeof($.fn.modal) === 'undefined') {document.write('<script src="/static/bootstrap-4.3.1-dist/js/bootstrap.bundle.min.js"><\/script>')}</script>
     <script defer src="{% static 'js/output.min.js' %}"></script>
     <script defer src="{% static 'js/main.js' %}"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-40167744-1"></script>
-    <script async src="https://cdn.ampproject.org/v0.js"></script>
-    <script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
-    <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
-    <script>
+    <script async>
     var test = document.createElement("div")
     test.className = "hidden d-none"
     document.head.appendChild(test)
@@ -66,5 +57,4 @@
         document.head.appendChild(link);
     }
     </script>
-</body>
 </html>
