--- a/greensource_pages/templates/greensource_pages/index.html
+++ b/greensource_pages/templates/greensource_pages/index.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="{% static 'images/homepage2.webp' %}" alt="array of ground mounted solar panels"/>
+                <img src="{% static 'images/off-grid.webp' %}" alt="array of ground mounted solar panels"/>
                 <div class="carousel-caption">
                     <h2 class="animated zoomIn">Cost effective
                         <span>Solar </span>Solution</h2>
