--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -37,7 +37,7 @@
     <link rel="canonical" href="https://greensourcenergy.com/" />
     <link rel="preload" fetchpriority="high" as="image" href="/static/images/greensourcelogo3.webp" type="image/webp" />
     <link rel="preload" fetchpriority="low" as="image" href="/static/images/homepage2.webp" type="image/webp" />
-    <link rel="preload" fetchpriority="low" as="image" href="/static/images/video-bg.webp" type="image/webp" />
+    <link rel="preload" fetchpriority="low" as="image" href="/static/images/bbb.webp" type="image/webp" />
 </head>
 <body>
 <div class="site-mobile-menu site-navbar-target">
