--- a/staticfiles/css/home.css
+++ b/staticfiles/css/home.css
@@ -4450,12 +4450,13 @@ input[type=radio]:focus {
 # 403 404 500 ERROR PAGES
 --------------------------------------------------------------*/
 .error{
-	background-image: url('/static/images/work-mode.webp');
+	background-image: url('/static/images/bbb.webp');
 	background-position: center center;
 	background-attachment: fixed;
+	background-repeat: no-repeat;
 	background-size: cover;
 	width: auto;
-	height: 100%;
+	height: 100vh;
 	text-align: center;
 }
 .error h4{
@@ -4479,7 +4480,7 @@ input[type=radio]:focus {
 .error a{
 	font-size: 16px;
 	font-weight: 500;
-	border: 2px solid #006420;
+	border: 2px solid #fff;
 	border-radius: 20px;
 	padding: 15px 20px;
 	color:#fff;
